# scott

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Changelog.md  Dockerfile  LICENSE.md  PERFORMANCE_PLAN.md  ReadMe.md  cliff.toml  compare_traces.sh  pyproject.toml  scott-rs-plan.md  setup.py  setup_cython.py  test_cfi-rigid.py  test_harness.py  test_isomorphism.py  test_runner.py  usage.py  usage_advanced.py
.github/workflows/: CI.yml  release.yml
data/: test.dot
data/batch/sdf/: data-src
data/batch/xml/: Compound_134600001_134625000.xml  get_more.txt
data/bound_cases/: cobound.dot  multiple_inbound.dot  simple_inbound.dot
data/isotest/: dimacs_randomizer.py  get_more.txt
data/isotest/cfi-rigid-t2-dot/: .!62929!cfi-rigid-t2-1728-03-1.dot  cfi-rigid-t2-0016-04-2.dot  cfi-rigid-t2-0020-01-1.dot  cfi-rigid-t2-0020-01-2.dot  cfi-rigid-t2-0020-02-1.dot  cfi-rigid-t2-0020-02-2.dot  cfi-rigid-t2-0020-03-1.dot  cfi-rigid-t2-0020-03-2.dot  cfi-rigid-t2-0040-04-1.dot  cfi-rigid-t2-0040-04-2.dot  cfi-rigid-t2-0044-01-1.dot  cfi-rigid-t2-0044-01-2.dot  cfi-rigid-t2-0048-01-1.dot  cfi-rigid-t2-0048-01-2.dot  cfi-rigid-t2-0048-02-1.dot  cfi-rigid-t2-0048-02-2.dot  cfi-rigid-t2-0048-03-1.dot  cfi-rigid-t2-0048-03-2.dot  cfi-rigid-t2-0048-04-1.dot  cfi-rigid-t2-0048-04-2.dot  cfi-rigid-t2-0072-01-1.dot  cfi-rigid-t2-0072-01-2.dot  (+118 more)
data/molecule/: antibiotic.sdf  antibiotic2.sdf  antibiotic3.sdf  arsphenamine.sdf  cafeine.sdf  caffeine.sdf  graphene.sdf  graphene2.sdf  simple.sdf  simple.xml
dockerfiles/classic/: Dockerfile
dockerfiles/debian/: Dockerfile
dockerfiles/jupyter/: Dockerfile
dockerfiles/pypy/: Dockerfile
dockerfiles/pypy-jupyter/: Dockerfile
dockerfiles/pyspark/: Dockerfile
docs/: Installation.md  Testing.md  _config.yml  index.md
docs/_includes/: analytics.html  head.html
nx_scott/: __init__.py  canonize.py  edge.py  graph.py  node.py  tree.py
nx_scott_direct/: __init__.py  canonize.py  graph_ops.py  trace.py
results/: perf_baseline.csv  perf_baseline.json  perf_baseline_debug.csv  perf_baseline_debug.json  perf_baseline_release.csv  perf_baseline_release.json  results_cfi-rigid-nx.csv  results_cfi-rigid-py.csv  results_cfi-rigid-rs.csv  results_cfi-rigid.csv
scott/: __init__.py  _backend.py  _smiles.py  canonize.py  compression.py  export.py  fragmentation.py  graph.py  parse.py  tools.py
scott-nx/: cgraph.py  test.py  tree.py
scott/structs/: __init__.py  cgraph.py  edge.py  graph.py  node.py  tree.py
scott/utils/: smiles2mol.py
scott_legacy/: __init__.py  canonize.py  fragmentation.py  parse.py
scott_legacy/structs/: edge.py  graph.py  node.py  tree.py
scott_legacy/utils/: __init__.py  smiles2mol.py
src/: canonize.rs  cgraph.rs  dag.rs  dot.rs  error.rs  graph.rs  lib.rs  parse.rs  py.rs  tree.rs
test/: harness.py  tests.py
test/bench/: bench_recursion.py
test/cli/: __init__.py  test_runner.py
test/pubchem_fragmentation/: global.txt
test/pytest/: conftest.py  test_canonization.py  test_graph_compat.py  test_parse.py  test_validity.py
test/scripts/: test_cfi_rigid.py  test_isomorphism.py
test/spark/: generate_ngram.py
(+59 files in other folders)
