[package]
name = "scott"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scott"
crate-type = ["cdylib", "rlib"]

[dependencies]
md5 = "0.7.0"
petgraph = "0.8.3"
pyo3 = { version = "0.27.0", features = ["extension-module"] }
serde_json = "1.0"
