[package]
name = "scott"
version = "1.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scott"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
md5 = "0.7.0"
petgraph = "0.8.3"
pyo3 = { version = "0.27.0", optional = true, features = ["extension-module", "abi3-py38"] }
rayon = { version = "1.10.0", optional = true }
serde_json = "1.0"

[features]
default = []
parallel = ["rayon"]
python = ["pyo3"]
